added Swagger anotations 3.0
